// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > combined > render(Box { content: 'content', padding: Padding { mainStart: 1, mainEnd: 1, crossStar...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

        
    ┌───────────┐    
    │           │    
    │  content  │    
    │           │    
    └───────────┘    


╚══════════════════════════════════════════════════╝"
`;

exports[`render > combined > render(Box { content: [ 'A', 'B' ], padding: Padding { mainStart: 1, mainEnd: 1, crossS...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────┐
│        │
│  A     │
│        │
│  B     │
│        │
└────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > content > styled > render(Box { content: [ 'Plain text', { text: 'Red text', color: { foreground: 'red' } ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
╔══════════════════════════════════════╗
║Plain text                            ║
║                                      ║
║[38;2;255;0;0mRed text[39m          ║
║                                      ║
║More plain                            ║
║                                      ║
║[1m[38;2;0;0;255mBold blue[39m[22m║
╚══════════════════════════════════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`render > content > styled > render(Box { content: { text: 'Bold Text', color: { foreground: 'green' }, bold: true }...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────────────────────────────────┐
│[1m[38;2;0;128;0mBold Text[39m[22m│
└──────────────────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > content > styled > render(Box { content: { text: 'Fancy', color: { foreground: 'magenta' }, bold: true, un...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────────────────────────────────────────┐
│[4m[1m[38;2;255;0;255mFancy[39m[22m[24m│
└─────────────────────────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > content > styled > render(Box { content: { text: 'Hello', color: { foreground: 'red' } }, border: Border {...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────────────────────┐
│[38;2;255;0;0mHello[39m│
└─────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > horizontal > render(Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', border: Border { ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───┐
│ABC│
└───┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > horizontal > render(Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', border: Border { ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│A   B   C│
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > horizontal > render(Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', border: Border { ed...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────┐
│A  B  C│
└───────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > string values > render(Box { content: [ 'A', 'B', 'C' ], border: Border { edges: BorderEdges { top: '─'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│A---B---C│
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > string values > render(Box { content: [ 'A', 'B', 'C' ], border: Border { edges: BorderEdges { top: '─'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────────┐
│A════B════C│
└───────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > string values > render(Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', border: Border { ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│A | B | C│
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > string values > render(Box { content: [ 'A', 'B', 'C' ], orientation: 'horizontal', border: Border { ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│A → B → C│
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > vertical > render(Box { content: [ 'A', 'B', 'C' ], border: Border { edges: BorderEdges { top: '─'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─┐
│A│
│B│
│C│
└─┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > vertical > render(Box { content: [ 'A', 'B', 'C' ], border: Border { edges: BorderEdges { top: '─'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─┐
│A│
│ │
│ │
│B│
│ │
│ │
│C│
└─┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > gap > vertical > render(Box { content: [ 'A', 'B', 'C' ], border: Border { edges: BorderEdges { top: '─'...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─┐
│A│
│ │
│B│
│ │
│C│
└─┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > margin > render(Box { content: 'Hi', orientation: 'horizontal', border: Border { edges: BorderEd...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──┐
   │Hi│
   └──┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > margin > render(Box { content: 'Hi', orientation: 'horizontal', border: Border { edges: BorderEd...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──┐   
│Hi│   
└──┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > margin > render(Box { content: 'Hi', orientation: 'horizontal', border: Border { edges: BorderEd...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

┌──┐
│Hi│
└──┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > margin > render(Box { content: 'Hi', orientation: 'horizontal', border: Border { edges: BorderEd...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──┐
│Hi│
└──┘

╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > padding > render(Box { content: '12345', orientation: 'horizontal', padding: Padding { crossEnd: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────┐
│12345│
│     │
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > padding > render(Box { content: '12345', orientation: 'horizontal', padding: Padding { crossStart...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────┐
│     │
│12345│
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > padding > render(Box { content: '12345', orientation: 'horizontal', padding: Padding { mainEnd: 2...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────┐
│12345  │
└───────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > padding > render(Box { content: '12345', orientation: 'horizontal', padding: Padding { mainStart:...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────┐
│  12345│
└───────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal > padding > render(Box { content: '12345', orientation: 'horizontal', padding: Padding { mainStart:...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│         │
│  12345  │
│         │
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > axishand > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

    
  ┌─────┐  
  │12345│  
  └─────┘  


╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > axishand > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

        
    ┌─────┐    
    │12345│    
    └─────┘    


╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > axishand > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

   ┌─────┐    
   │12345│    
   └─────┘    


╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > axishand > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

    ┌─────┐    
    │12345│    
    └─────┘    


╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > axishand > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

      
      ┌─────┐
      │12345│
      └─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > string values > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
>>> ┌─────┐
>>> │12345│
>>> └─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > string values > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────┐ <<<
│12345│ <<<
└─────┘ <<<
╚══════════════════════════════════════════════════╝"
`;

exports[`render > margin > string values > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┃ 
┃ ┌─────┐
┃ │12345│
┃ └─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > deep > render(Box { content: [ Box { content: [ Box { content: 'core', border: [Object], paddi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
╔════════════╗
║  ┌──────┐  ║
║  │      │  ║
║  │+----+│  ║
║  │|core|│  ║
║  │+----+│  ║
║  │      │  ║
║  └──────┘  ║
╚════════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > gap > render(Box { content: [ Box { content: 'X', border: Border { edges: BorderEdges { top: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───┐
│┌─┐│
││X││
│└─┘│
│   │
│╔═╗│
│║X║│
│╚═╝│
│   │
│╭─╮│
││X││
│╰─╯│
└───┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > gap > render(Box { content: [ Box { content: 'X', border: Border { edges: BorderEdges { top: ...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────────┐
│┌─┐  ╔═╗  ╭─╮│
││X│  ║X║  │X││
│└─┘  ╚═╝  ╰─╯│
└─────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > gap > string > render(Box { content: [ Box { content: 'X', border: Border { edges: BorderEdges { top: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────────┐
│┌─┐        │
││X│        │
│└─┘─────╔═╗│
│║X║        │
│╚═╝─────╭─╮│
││X│        │
│╰─╯        │
└───────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > gap > string > render(Box { content: [ Box { content: 'X', border: Border { edges: BorderEdges { top: ...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────────────┐
│┌─┐ │ ╔═╗ │ ╭─╮│
││X│ │ ║X║ │ │X││
│└─┘ │ ╚═╝ │ ╰─╯│
└───────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > horizontal > render(Box { content: [ Box { content: 'A', border: Border { edges: BorderEdges { top: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────┐
│┌─┐╔═╗│
││A│║B║│
│└─┘╚═╝│
└──────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > nested > vertical > render(Box { content: [ 'Header', Box { content: 'inner', padding: Padding { crossStart...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
╔═══════════╗
║Header     ║
║┌─────────┐║
║│  inner  │║
║└─────────┘║
║Footer     ║
╚═══════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > axishand > render(Box { content: '12345', padding: Padding { mainStart: 1, mainEnd: 2, crossStart:...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────────┐
│            │
│   12345    │
│            │
│            │
└────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > axishand > render(Box { content: '12345', padding: Padding { mainStart: 1, mainEnd: 2, crossStart:...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────────┐
│             │
│    12345    │
│             │
│             │
└─────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > axishand > render(Box { content: '12345', padding: Padding { mainStart: 2, crossStart: 6 }, border...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───────────┐
│           │
│           │
│      12345│
└───────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > axishand > render(Box { content: '12345', padding: Padding { mainStart: 2, mainEnd: 2, crossStart:...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────┐
│         │
│         │
│  12345  │
│         │
│         │
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > padding > axishand > render(Box { content: '12345', padding: Padding { mainStart: 2, mainEnd: 2, crossStart:...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────────────┐
│             │
│             │
│    12345    │
│             │
│             │
└─────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────┐
│12345│
│     │
│     │
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────┐
│12345   │
└────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: '12345', border: Border { edges: BorderEdges { top: '─', right: '...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────┐
│12345 │
│      │
└──────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: 'Hi\\nWorld', border: Border { edges: BorderEdges { top: '─', righ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌─────┐
│Hi   │
│World│
│     │
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: 'Hi\\nWorld', border: Border { edges: BorderEdges { top: '─', righ...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────┐
│Hi      │
│World   │
└────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > absolute > render(Box { content: 'Hi\\nWorld', border: Border { edges: BorderEdges { top: '─', righ...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────┐
│Hi    │
│World │
└──────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > string values > render(Box { content: 'Hello World', border: Border { edges: BorderEdges { top: '─', ri...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────────┐
│Hello World │
└────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > string values > render(Box { content: 'Hi', border: Border { edges: BorderEdges { top: '─', right: '│',...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────┐
│Hi  │
└────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`render > span > string values > render(Box { content: 'Hi', border: Border { edges: BorderEdges { top: '─', right: '│',...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌───┐
│Hi │
└───┘
╚══════════════════════════════════════════════════╝"
`;
